k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-net
  labels:
    app: helloworld-net
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld-net
  template:
    metadata:
      labels:
        app: helloworld-net
    spec:
      containers:
        - name: helloworld-net
          image: sandb0x.azurecr.io/helloworld-net:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - name: data
              mountPath: /app/data
      # Azure doesn not need this:
      # imagePullSecrets:
      #   - name: dockerhub
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: storage
