k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-k8s-net
spec:
  rules:
    - host: hello-world-k8s-net.local
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: hello-world-k8s-net
                port:
                  number: 80
